Update frontend UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Groq Chat</title>
+    <title>ChatBot</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
 <body>
 
 <div class="container">
-    <h2>Groq API Chat</h2>
+    <h2>ChatBot</h2>
 
     <textarea id="text" rows="4" placeholder="Type your message..."></textarea>
 
